fylo-data-storage-component/scss/_container.scss
$BorderRadius: 11px;
$CardsPadding: 2.2rem;

.container {
  margin-top: 7.5rem;
  width: 86%;

  .first-card {
    height: 210px;
    background-color: $DarkBlue;
    border-radius: $BorderRadius;
    border-top-right-radius: 110px;

    padding: $CardsPadding;
    padding-top: 2.6rem;
    margin-bottom: 1rem;

    .logo {
      margin-bottom: 2.5rem;
    }

    .icons {
      width: 68%;
      display: flex;
      flex-flow: row nowrap;
      justify-content: space-between;
      align-items: center;

      @for $i from 1 through 3 {
        div:nth-child(#{$i}) {
          height: 46px;
          width: 47px;
          background-color: $VeryDarkBlue;
          border-radius: 9px;

          display: flex;
          justify-content: center;
          align-items: center;
        }
      }
    }
  }

  .second-card {
    height: 160px;
    margin-bottom: 35px;
    background-color: $DarkBlue;
    border-radius: $BorderRadius;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    position: relative;
    padding: 1.7rem;
    padding-top: 1.9rem;
    padding-bottom: 3.35rem;

    &__storage-used {
      font-weight: 400;
      font-size: 0.88rem;
      text-align: center;
      color: $PaleBlue;

      span {
        font-weight: 700;
      }
    }

    &__progress-bar {
      height: 18px;
      width: 100%;
      background-color: $VeryDarkBlue;
      padding: 2.5px;
      border-radius: 30px;

      display: flex;
      align-items: center;
      margin-top: 5px;

      &__current-progress {
        height: 100%;
        width: 81.5%;
        border-radius: 35px;
        background-color: $DarkBlue;
        background-image: linear-gradient(
          to right,
          hsl(6, 100%, 80%),
          hsl(335, 100%, 65%)
        );

        div {
          height: 10px;
          width: 10px;
          border-radius: 50%;
          margin-top: 1.25px;
          margin-right: 2px;
          box-shadow: 0px 0px 3px black;
          background-color: white;
          float: right;
        }
      }
    }

    &__bar-details {
      font-weight: 700;
      font-size: 0.86rem;
      display: flex;
      justify-content: space-between;
      color: $PaleBlue;
    }

    .space-left {
      height: 70px;
      width: 170px;
      transform: translateX(29%);
      border-radius: 10px;

      position: absolute;
      display: flex;
      align-items: center;
      justify-content: center;

      font-size: 2.2rem;
      font-weight: 700;
      text-transform: uppercase;

      background-color: white;
      color: black;
      bottom: -35px;

      span {
        font-size: 0.85rem;
        color: $GrayishBlue;
        margin-left: 0.5rem;
      }
    }
  }
}

